<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spnNgonNgu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_spninner" />

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="match_parent"
        android:layout_height="332dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_login" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/xanhTieuDe"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/xanhTieuDe"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/gray_light"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCauHoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/tvDangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/xanhNgoc"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_login"
        android:text="@string/login"
        android:textSize="20sp"
        app:backgroundTint="@null" />

</LinearLayout>