<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgBackLoginActivity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_back"
            android:contentDescription="Quay lại"
            android:src="@drawable/ic_arrow_back"
            app:backgroundTint="@null"
            app:tint="@color/xanhNgoc" />

        <TextView
            android:id="@+id/tvTieuDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:text="@string/reset_pass"
            android:textColor="@color/xanhTieuDe"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imgHideShowPass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Hiện/ẩn mật khẩu"
                android:padding="4dp"
                android:src="@drawable/show" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPasswordNhapLai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:text="@string/nhaplai_pass"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtPasswordNhapLai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edt_nhaplai_pass"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imgHideShowPassNhapLai"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Hiện/ẩn mật khẩu"
                android:padding="4dp"
                android:src="@drawable/show" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPasswordRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRuleLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rulelength"
                android:textColor="@color/gray_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvRuleCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rulecase"
                android:textColor="@color/gray_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvRuleSpecial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rulespecial"
                android:textColor="@color/gray_light"
                android:textSize="15sp" />
        </LinearLayout>



        <Button
            android:id="@+id/btnSavePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_login"
            android:padding="10dp"
            android:layout_marginTop="200dp"
            android:text="@string/save_pass"
            android:textSize="20sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</ScrollView>